--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=BankManagementSystem
 server.port=1330
 
 #Database Properties
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bms_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=sam@6383587926
